force-app/main/default/objects/management__c/management__c.object-meta.xml
<CustomObject>
    <label>management</label>
    <nameField>
        <label>management Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>managements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>