force-app/main/default/objects/management__c/fields/departments__c.field-meta.xml
<CustomField>
    <fullName>departments__c</fullName>
    <label>departments</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CS</fullName>
            </value>
            <value>
                <fullName>ECE</fullName>
            </value>
            <value>
                <fullName>EEE</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>