force-app/main/default/objects/management__c/fields/FEES__c.field-meta.xml
<CustomField>
    <fullName>FEES__c</fullName>
    <label>FEES</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>