force-app/main/default/objects/management__c/fields/iscancelled__c.field-meta.xml
<CustomField>
    <fullName>iscancelled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Boolean</label>
    <type>Checkbox</type>
</CustomField>