force-app/main/default/objects/management__c/validationRules/age.validationRule-meta.xml
<ValidationRule>
    <fullName>age</fullName>
    <active>true</active>
    <errorConditionFormula>Age__c  &gt;= 25</errorConditionFormula>
    <errorMessage>you are not eligible</errorMessage>
</ValidationRule>